<resources>
    <string name="app_name">The Contractor</string>
    <string name="login_activity">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="pin_code">4 Digits Pin Code</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="not_a_member">Not a Member? Create Account</string>
    <string name="serviceError">Service not responding please try again</string>
    <string name="phone_no_error">Enter phone number</string>
    <string name="password_error">Enter 4 digits pin code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="forgot_password_message">Enter your registered mobile number and we will send you a pin code to reset your password.</string>
    <string name="submit_btn">Submit</string>
    <string name="sms_sent_on_that_number">&#160;SMS sent on that number</string>
    <string name="verification_code">Verification code</string>
    <string name="next_btn">Next</string>
    <string name="resend_code_btn">Resend Code</string>
    <string name="resend_btn">Resend</string>
    <string name="enter_verification_code">Please Enter Verification Code</string>
    <string name="verification_code_sent">Verification code has been sent</string>
    <string name="phone_number_not_registered">Phone number not registered</string>
    <string name="please_try_again">Please try again</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_your_new_password">Please enter your new password.</string>
    <string name="new_4_digit_pin">New 4 Digit Pin</string>
    <string name="confirm_4_digit_pin">Confirm 4 Digit Pin</string>
    <string name="update_password">Update Password</string>
    <string name="enter_new_4_digit_pin">Enter new 4 digit pin</string>
    <string name="enter_at_least_4_digit_pin">Enter at least 4 digit pin</string>
    <string name="enter_confirm_4_digit_pin">Enter confirm 4 digit pin</string>
    <string name="pin_not_matched">4 digit pin not matched</string>
    <string name="resend_in">Resend in&#160;</string>
    <string name="seconds">&#160;Seconds"</string>
    <string name="verify_number">Verify Number</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="sur_name">Sur Name</string>
    <string name="email_address">Email Address</string>
    <string name="_4_digit_pin">4 Digit Pin</string>
    <string name="enter_user_name_error">Enter username</string>
    <string name="enter_valid_user_name_error">Enter valid username</string>
    <string name="enter_name_error">Enter name</string>
    <string name="enter_sur_name_error">Enter sur name</string>
    <string name="enter_email_address_error">Enter email address</string>
    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="old_4_digit_pin">Old 4 Digit Pin</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_4_digit_pin">Enter old 4 digit pin</string>
    <string name="home">Home</string>
    <string name="workshop">Workshop</string>
    <string name="jobs_portal">Jobs Portal</string>
    <string name="search">Search</string>
    <string name="estimation">Estimation</string>
    <string name="profile">Profile</string>
    <string name="company_finder">Company Finder</string>
    <string name="submit_enquiry">Submit Enquiry</string>
    <string name="enquiries">Enquiries</string>
    <string name="submit_quotation">Quotation By Photo</string>
    <string name="quotations">Quotations</string>
    <string name="complaints">Complaints</string>
    <string name="estimations">Estimations</string>
    <string name="_24_7_companies">24/7 Companies</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="select_language">Select Language</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="logout">Logout</string>
    <string name="search_for_companies">Search for Companies</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="enter_company_name_or_id">Enter Company Name or ID</string>
    <string name="address">Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_address_error">Enter address</string>
    <string name="permit_all_permission">Please permit all the permissions</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select Photo From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo!</string>
    <string name="want_to_logout">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selected_companies">Selected Companies</string>
    <string name="add_contact_info">Add Contact Info</string>
    <string name="no_selected_companies_found">No Selected Companies Found</string>
    <string name="contact_information">Contact Information</string>
    <string name="enquiries_submitted">Enquiries Submitted</string>
    <string name="ok">Ok</string>
    <string name="choose_your_preferred_language">Choose Your Preferred Language</string>
    <string name="please_select_your_language">Please Select Your Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="specialties">Specialties</string>
    <string name="categories">Categories</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="details">Details</string>
    <string name="choose_images">Choose Images</string>
    <string name="maximum_5_images">Maximum 5 Images</string>
    <string name="enter_details">Enter details</string>
    <string name="select_upto_5_images">You can select up to 5 images</string>
    <string name="quotation_submitted">Quotation Submitted</string>
    <string name="view_profile">View Profile</string>
    <string name="cart_empty">You have not select any company</string>
    <string name="press_again_to_exit">Press again to exit!</string>
    <string name="companies">Companies</string>
    <string name="remove_company">Remove Company</string>
    <string name="select_company">Select Company</string>
    <string name="featured_companies">Featured Companies</string>
    <string name="no_24_7_companies_found">No 24/7 Companies Found</string>
    <string name="companies_not_found">Companies Not Found</string>
    <string name="no_enquires_found">No Enquires Found</string>
    <string name="elert">Alert</string>
    <string name="no_quotations_found">No Quotations Found</string>
    <string name="cities">Cities</string>
    <string name="areas">Areas</string>
    <string name="show_verified_listed_only">Show Verified listed only</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="select_specialities">Please select specialities</string>
    <string name="select_category">Please select category</string>
    <string name="select_sub_category">Please select sub category</string>
    <string name="select_city">Please select city</string>
    <string name="select_area">Please select area</string>
    <string name="enter_keyword_error">Please enter keyword</string>
    <string name="search_result">Search Result</string>
    <string name="no_result_found">No Result Found</string>
    <string name="sub_categories_not_found">Sub Categories Not Found</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_found">No Reviews Found</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="location">Location</string>
    <string name="google_location">Google Location</string>
    <string name="description">Description</string>
    <string name="no_complaints_found">No Complaints Found</string>
    <string name="no_estimations_found">No Estimations Found</string>
    <string name="complaints_details">Complaint Details</string>
    <string name="enquiry_details">Enquiry Details</string>
    <string name="estimations_details">Estimation Details</string>
    <string name="currency">AED</string>
    <string name="note">Note</string>
    <string name="what_are_you_looking_for">What Are You Looking For?</string>
    <string name="what_category">What Category?</string>
    <string name="estimate_for_how_much_sqft">Estimate For How Much Sqft ?</string>
    <string name="sqft">Sqft</string>
    <string name="estimated_budget">Estimated Budget</string>
    <string name="calculate_estimated_budget">Calculate Estimated Budget</string>
    <string name="estimation_detail">Estimation Detail</string>
    <string name="looking_for">Looking For</string>
    <string name="selected_category">Selected Category</string>
    <string name="total_sqft">Total Sqft</string>
    <string name="submit_now_for_free_consultation">Submit Now For Free Consultation</string>
    <string name="full_name">Full Name</string>
    <string name="submit_details">Submit Details</string>
    <string name="estimate_again">Estimate Again</string>
    <string name="looking_for_error">Please select looking for</string>
    <string name="squre_feed_error">Enter square feet</string>
    <string name="full_name_error">Enter full name</string>
    <string name="estimation_submitted">Estimation Submitted</string>
    <string name="complaint">Complaint</string>
    <string name="company_details">Company Details</string>
    <string name="something_wrong_company">Something wrong company not selected</string>
    <string name="enter_your_complain_first">Enter your complain first</string>
    <string name="complaint_submitted">Complaint Submitted</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="since">Since</string>
    <string name="noOFEmployees">No of Employees</string>
    <string name="submit_complain">Submit Complain</string>
    <string name="enter_your_complain">Enter your Complain</string>
    <string name="no_opening_hours_found">No Opening Hours Found</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="quotation_no">Quotation No</string>
    <string name="complaint_no">Complaint No</string>
    <string name="estimation_no">Estimation No :&#160;</string>
    <string name="looking_for_">Looking For :&#160;</string>
    <string name="selected_category_">Selected Category :&#160;</string>
    <string name="sqft_">Sqft :&#160;</string>
    <string name="per_sqft_price">Per Sqft Price</string>
    <string name="estimation_status">Estimation Status</string>
    <string name="admin_note">Admin Note</string>
    <string name="user_information">User Information</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="enquiry_status">Enquiry Status</string>
    <string name="order_at">Order At</string>
    <string name="request_for_installment">Request For Installment</string>
    <string name="login_or_create_account">Login or Create Account</string>
    <string name="quotations_status">Quotations Status</string>
    <string name="images">Images</string>
    <string name="assigned_companies">Assigned Companies</string>
    <string name="quotation_details">Quotation Details</string>
    <string name="top_10_companies">Top 10 Companies</string>
    <string name="country_code">+971</string>
    <string name="username">Username</string>
    <string name="login_as_a_user">Login as a User</string>
</resources>