<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screenPadding">


        <EditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textCapSentences"
            style="@style/editTextStyle" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/fistNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapSentences"
                style="@style/editTextStyle"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"/>


            <EditText
                android:id="@+id/lastNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sur_name"
                android:inputType="textCapSentences"
                style="@style/editTextStyle"
                android:layout_weight="1"
                android:layout_marginStart="5dp"/>


        </LinearLayout>



        <EditText
            android:id="@+id/mobileET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="15"
            style="@style/editTextStyle"
            android:focusable="false"
            android:clickable="false"/>

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            style="@style/editTextStyle" />



        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/_4_digit_pin"
            android:maxLength="4"
            android:inputType="textPassword"
            style="@style/editTextStyle" />




        <EditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_4_digit_pin"
            android:maxLength="4"
            android:inputType="textPassword"
            style="@style/editTextStyle" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            style="@style/buttonStyle"/>
    </LinearLayout>


</ScrollView>