<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitQuotations"
    android:background="@color/background"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screenPadding"
        android:id="@+id/requestForQuotationLayout">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            style="@style/headingStyle" />

        <View
            android:layout_width="@dimen/headingLineWidth"
            android:layout_height="@dimen/headingLineHeight"
            android:background="@drawable/heading_line_bacground"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriesRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/lightColor"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_categories"
            style="@style/headingStyle" />

        <View
            android:layout_width="@dimen/headingLineWidth"
            android:layout_height="@dimen/headingLineHeight"
            android:background="@drawable/heading_line_bacground"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSubCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/fistNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapSentences"
                style="@style/editTextStyle"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"/>


            <EditText
                android:id="@+id/lastNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sur_name"
                android:inputType="textCapSentences"
                style="@style/editTextStyle"
                android:layout_weight="1"
                android:layout_marginStart="5dp"/>

        </LinearLayout>





        <EditText
            android:id="@+id/mobileET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="15"
            style="@style/editTextStyle"/>






        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            style="@style/editTextStyle" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details"
            android:gravity="top"
            android:id="@+id/detailsET"
            android:inputType="textMultiLine"
            android:lines="8"
            style="@style/editTextStyle"
            android:maxLines="10"
            android:minLines="3"
            android:scrollbars="vertical"
            android:layout_marginTop="10dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chooseImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/choose_images"
            android:background="@drawable/edittext_background"
            android:textColor="@color/editTextColor"
            android:textSize="@dimen/editTextSize"
            android:textAllCaps="false"
            android:gravity="center"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maximum_5_images"
            android:textSize="12sp"
            android:textColor="@color/black" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/customImagesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_container"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit_quotation"
            style="@style/buttonStyle"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>