<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VendorActivities.VendorLogin"
    android:orientation="vertical"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/screenPadding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/logo" />




        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            style="@style/editTextStyle" />





        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pin_code"
            android:maxLength="4"
            android:inputType="textPassword"
            style="@style/editTextStyle" />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/buttonStyle"
            android:layout_marginTop="20dp"/>






        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:id="@+id/forgotPassword"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_marginTop="10sp"/>


    <!--    <View-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_weight="1"/>-->


        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|bottom"
            android:text="@string/not_a_member"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"/>



        <TextView
            android:id="@+id/loginAsUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/login_as_a_user"
            android:textColor="@color/appColor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/outline_login_black_button_bacground"/>



    </LinearLayout>

</LinearLayout>